--- a/Samples/Salesforce.Sample.SmartSyncExplorerHybrid/index.html
+++ b/Samples/Salesforce.Sample.SmartSyncExplorerHybrid/index.html
@@ -8,6 +8,7 @@
     <!-- WinJS references -->
     <script src="/js/WinJS-3.0.js"></script>
     <script src="/typescript/salesforce.windows.core.js"></script>
+    <script src="/typescript/salesforce.windows.smartsync.js"></script>
 
     <!-- Salesforce.SDK.TypeScript references -->
     <link href="/css/ratchet.css" rel="stylesheet" />
