Fix Hybrid Sample App

--- a/Samples/Salesforce.Sample.SmartSyncExplorerHybrid/index.html
+++ b/Samples/Salesforce.Sample.SmartSyncExplorerHybrid/index.html
@@ -6,8 +6,9 @@
     <title>SmartSyncExplorer Hybrid</title>
 
     <!-- WinJS references -->
-    <script src="/js/WinJS-3.0.js"></script>
+    <script src="/WinJS/js/base.js"></script>
     <script src="/typescript/salesforce.windows.core.js"></script>
+    <script src="/typescript/salesforce.windows.smartstore.js"></script>
     <script src="/typescript/salesforce.windows.smartsync.js"></script>
 
     <!-- Salesforce.SDK.TypeScript references -->
@@ -36,7 +37,7 @@
             <div class="content-padded">
                 <div class="details">
                     <input id="soupentryid" type="hidden" name="soupentryid">
-                    <input id="contactid" type="hidden" name="id">
+                    <input id="contactid" type="hidden" name="contactid">
                     <input id="firstname" placeholder="FirstName" type="text" name="FirstName" /><br />
                     <input id="lastname" placeholder="LastName" type="text" name="LastName" /><br />
                     <input id="title" placeholder="Title" type="text" name="Title" /><br />
